Fix data explorer filter button hover states for high contrast themes

--- a/src/vs/workbench/browser/positronDataExplorer/components/dataExplorerPanel/components/rowFilterBar/rowFilterBar.css
+++ b/src/vs/workbench/browser/positronDataExplorer/components/dataExplorerPanel/components/rowFilterBar/rowFilterBar.css
@@ -27,6 +27,12 @@
 	background-color: var(--vscode-positronDataExplorer-background);
 }
 
+/* high contrast theme support for manage filter button */
+.hc-black .data-explorer-panel .row-filter-bar .row-filter-button:hover,
+.hc-light .data-explorer-panel .row-filter-bar .row-filter-button:hover {
+	border: 1px dashed var(--vscode-focusBorder) !important;
+}
+
 .data-explorer-panel .row-filter-bar .row-filter-button:focus {
 	outline: none !important;
 }
@@ -72,6 +78,12 @@
 	justify-content: center;
 	border: 1px solid var(--vscode-positronDataExplorer-border);
 	background-color: var(--vscode-positronDataExplorer-background);
+}
+
+/* high contrast theme support for add filter button */
+.hc-black .data-explorer-panel .row-filter-bar .filter-entries .add-row-filter-button:hover:not(.disabled),
+.hc-light .data-explorer-panel .row-filter-bar .filter-entries .add-row-filter-button:hover:not(.disabled) {
+	border: 1px dashed var(--vscode-focusBorder) !important;
 }
 
 .data-explorer-panel .row-filter-bar .filter-entries .add-row-filter-button.disabled {
